css/style.css
:root {
    --text-color: #657b83;
    --dark: #503c25;
    --background-color: #fdf6e3;
    --background-tsp: #fdf6e3ea;
    --light: #eee8d5;
    --accent-1: #81aa8a;
    --red: #dc322f;
}


/*resets stylesheet*/
* {
    border: none;
    margin: 0;
    padding: 0;
    color: var(--text-color);
    font-size: 18px;
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    list-style: none;
    text-decoration: none;
}

html {
    background: var(--light);
}

/*utilitary classes*/
.flex {
    display: flex;
}

.column, #nav {
    flex-direction: column;
}

.between {
    justify-content: space-between;
}

.wrap {
    flex-wrap: wrap;
}

.container {
    width: 900px;
    max-width: 90vw;
    margin: 0px auto;
}

.bold {
    font-weight: bold;
}

main>.container {
    margin: 20px auto;
}

.text_right {
    text-align: right;
}

.pad-10 {
    padding: 10px;
}

.gap-10 {
    gap: 10px;
}

/*General elements*/
section {
    background-color: var(--background-tsp);
    border-radius: 15px;
    padding: 20px;
    margin: 20px auto 0px auto;
    overflow-x: hidden;
    backdrop-filter: blur(2px);
    flex-flow: column;
}

body {
    background: var(--light);
    background: linear-gradient(0deg, var(--dark) 10%, var(--text-color) 45%, var(--light) 90%);
    min-height: 100vh;
}

main {
    background: url('assets/city.png');
    background-position: 50% -25%;
    ;
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}

/*titles*/

h1, #nav {
    font-size: 30px;
    text-align: center;
}

h2 {
    font-size: 25px;
    padding-bottom: 20px;
}

h3 {
    font-size: 18px;
}

h1,
h2,
h3,
h2>a,
h3>a {
    color: var(--dark);
}

/*popovers*/

dialog {
    margin: auto;
    width: 75%;
    max-height: 75%;
    border: 1px solid var(--text-color);
    background: var(--background-color);
    border-radius: 5px;
}

dialog input {
    margin-bottom: 10px;
}

dialog textarea {
    height: fit-content;
    min-height: 200px;
    max-width: 96%;
    margin: auto;
}

:backdrop {
    color: var(--dark);
    opacity: 1;
}

/*forms*/
button.close {
    height: 15px;
    width: 15px;
    object-fit: cover;
    position: relative;
    bottom: 5px;
    background: none;
    padding: 0px;
    margin: 10px;
    border-radius: 0px;
}

button.close:focus {
    box-shadow: none;
}

button.close>svg>path:active {
    fill: var(--text-color);
}

.signForm {
    width: 100%;
}

input,
textarea {
    width: 100%;
    border: 1px solid var(--text-color);
    background: var(--background-color);
    border-radius: 5px;
}

.miniInput {
    width: 97%;
    margin: 0 auto auto auto;
}

.bigInput {
    width: 97%;
    margin: auto;
}

button {
    width: 50%;
    margin: auto;
    padding: 10px;
    border-radius: 25px;
    background-color: var(--accent-1);
    color: var(--background-color);
}

td button {
    width: 100%;
}

button:focus {
    box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, 0.2);
}


form>button {
    margin : 10px auto;
}

/*messages to user*/
.message {
    color: var(--red);
    font-style: italic;
    text-align: center;
}

.thisEmptyMessage {
    font-style: italic;
    text-align: center;
}

.disclaimer {
    font-size : 13px;
}

/*navbar + footer*/
.dark_section {
    background: var(--dark);
    font-weight: bold;
}

.dark_section a {
    color: var(--accent-1);
}

.dark_section ul,
.dark_section p {
    padding-top: 15px;
}

footer :not(h3) {
    font-size: 13px;
    font-weight: normal;
}

footer p {
    text-align: center;
}

footer h3 {
    color: var(--light);
}

/*profile*/
#user_info {
    width: 100vw;
    max-width: 400px;
}

img {
    border-radius: 500px;
    width: 150px;
    height: 150px;
    object-fit: cover;
}

.answers img {
    width: 75px;
    height: 75px;
    margin: auto;
}

#edit {
    width: 150px;
}

#editPp{
    position: relative;
    border-radius: 500px;
    height: 30px;
    width: 30px;
    top: 120px;
    left: -65px;
    padding: 5px 0px 5px 0px;
    background: var(--text-color);
    border: none;
}

#editPp:hover {
    background: var(--dark);
    box-shadow: 0px 0px 2px 0px var(--dark);
    border: none;
    transition-duration: 0.5s;
}

#editPp:focus {
    box-shadow: none;
}

#newPp {
    width: 80%;
}

input::file-selector-button, .tinyGuy {
    margin: 0;
    font-size: 13px;
    padding: 5px 10px;
    background-color: var(--accent-1);
    color: var(--light);
    width: fit-content;
    border-radius: 5px;
}

input::file-selector-button{
    height: 100%;
    font-size: 17px;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    margin : 0px 10px 0px -2px;
    border-radius: 0px;
    border : none;
    border-right: 1px solid var(--text-color);
}


.dark .tinyGuy {
    background-color: var(--text-color);
}

.list {
    align-content: center;
    width: 880px;
    max-width: 88vw;
    position: relative;
    left: -20px;
    border-bottom: 1px solid var(--text-color);
}

.dark {
    background: var(--accent-1);
    border-bottom: none;
    margin-top: 5px;
}

.list:last-child {
    border-bottom: none;
}

select {
    padding: 5px;
    border-radius: 5px;
    background: var(--light);
    border: 1px solid var(--text-color);
}

/*answers*/
.ansPseudo {
    text-align: center;
}

.deletePost {
    justify-content: end;
    position: absolute;
    top: 10px;
    right: 10px;
}

.ansBody {
    width : 100%;
}

.ansForm {
    height : 25px;
}

/*dashboard*/
.miniModal {
    margin: auto;
    border: 2px solid var(--text-color);
}

.miniModalElement {
    margin: 0px;
    border-radius: 0px;
}

.report {
    background: transparent;
    padding: 0px;
    height: 25px;
    width: 25px;
}

dialog select {
    border-radius: 0px;
}

#EditCat, #EditSubCat {
    border-radius : 5px;
}

@media (min-width: 640px) {
    section {
        flex-flow: row wrap;
    }

    .miniInput {
        width: 47%;
    }

    #nav{
        flex-direction: row;
    }
}

